# user.management/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/UserController.java
@@ -4,79 +4,57 @@ import java.util.List;
 
 import javax.validation.Valid;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RestController;
 
+import lombok.RequiredArgsConstructor;
+import ro.agilehub.javacourse.car.hire.api.model.CreatedDTO;
 import ro.agilehub.javacourse.car.hire.api.model.UserDTO;
 import ro.agilehub.javacourse.car.hire.api.specification.UsersApi;
 import ro.agilehub.javacourse.car.hire.user.service.UserService;
-import static java.util.stream.Collectors.toList;
 
 @RestController
+@PreAuthorize("hasAuthority('MANAGER')")
+@RequiredArgsConstructor
 public class UserController implements UsersApi {
 
-	@Autowired
-	private UserService userService;
+	private final UserService userService;
 
 	@Override
 	public ResponseEntity<List<UserDTO>> getUsers() {
-		// return ResponseEntity.ok(Collections.singletonList(buildStubs()));
-
-		var userEntities = userService.findAll();
-		return ResponseEntity.ok(userEntities.stream().map(userEntity -> {
-			var result = new UserDTO();
-			result.setId(userEntity.getId());
-			result.setFirstName(userEntity.getFirstName());
-			result.setLastName(userEntity.getLastName());
-			result.setUsername(userEntity.getFirstName()+ " "+ userEntity.getLastName());
-			result.setEmail(userEntity.getEmail());
-			result.setCountryOfResidence(userEntity.getCountry().getName());
-			return result;
-		}).collect(toList()));
+		return ResponseEntity.ok(userService.findAll());
 	}
 
 	@Override
-	public ResponseEntity<UserDTO> getUserById(Long userId) {
-		return ResponseEntity.ok(buildStubs());
-
-	}
-
-	public UserDTO buildStubs() {
-		UserDTO userDTO = new UserDTO();
-		userDTO.setId(1);
-		userDTO.setFirstName("Diana");
-		userDTO.setLastName("Terciu");
-		return userDTO;
+	public ResponseEntity<UserDTO> getUserById(Integer userId) {
+		return ResponseEntity.ok(userService.findById(userId).get());
 	}
 
 	@Override
-	public ResponseEntity<UserDTO> addUser(@Valid UserDTO userDTO) {
-
-		return ResponseEntity.ok(buildStubs());
+	public ResponseEntity<CreatedDTO> addUser(@Valid UserDTO userDTO) {
+		Integer newUserId = userService.createNewUser(userDTO);
+		CreatedDTO createdDTO = new CreatedDTO();
+		return ResponseEntity.status(HttpStatus.CREATED).body(createdDTO.id(newUserId));
 	}
 
 	@Override
-	public ResponseEntity<Void> deleteUserById(Long userId) {
-		return UsersApi.super.deleteUserById(userId);
+	public ResponseEntity<Void> updateUser(Integer userId, @Valid UserDTO userDTO) {
+		userService.patchUser(userId, userDTO);
+		return ResponseEntity.status(HttpStatus.OK).build();
 	}
 
 	@Override
-	public ResponseEntity<Void> updateUser(Long userId, UserDTO userDTO) {
-
-		UserDTO user = buildStubs();
-		if (user == null) {
-			return ResponseEntity.notFound().build();
-		}
-
-		if (user.getFirstName() != null) {
-			user.setFirstName(userDTO.getFirstName());
-		}
-		if (user.getLastName() != null) {
-			user.setLastName(userDTO.getLastName());
-		}
-		return UsersApi.super.updateUser(userId, userDTO);
-
+	public ResponseEntity<Void> deleteUserById(Integer id) {
+		userService.deleteUser(id);
+		return ResponseEntity.status(HttpStatus.OK).build();
 	}
-
+	
+	
+	
+	
+	
+	
+	
 }
